{
    "name": "TraverserControls",
    "maps": [
        {
            "name": "Player Controls",
            "id": "7436c081-b9da-4500-9acf-a6c0d381a738",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8992906c-9df9-4e11-af83-b8aab0375317",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "4b3f2b30-fbd8-4797-bc3b-4e91fcfbe7b8",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "7aeacb1a-bc00-4cbf-831c-f9fb68a73eb3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WestButton",
                    "type": "Button",
                    "id": "dbada5d5-9714-49ab-b8f5-f9e34eaa870f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NorthButton",
                    "type": "Button",
                    "id": "519d0ae4-6304-4530-87cd-d84f6721d4d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EastButton",
                    "type": "Button",
                    "id": "18b91a24-689e-49ab-8d0c-cfa1c55f53a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SouthButton",
                    "type": "Button",
                    "id": "6c4315c2-4fa4-4a9a-983e-10ed7fe56b5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "83c4af69-4355-4bb8-86b4-507c1595cc6e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6931e0e0-3f4d-4d3f-82a0-38d5569ed784",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "f6bc905a-af94-4798-a16e-5b764229d0f0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "95f4f7fa-a80b-4f0a-a823-4c869091670b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5434a95c-e22e-4318-909a-5cba7a93c730",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a34099c3-5820-4561-937f-3999ecde7358",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c4ef5c1-5485-46ec-9cdc-7343c873f7fd",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b1a2321-7aad-43fa-a743-445aac300497",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "554a8783-30b0-4b4d-b332-5206aeadc0cc",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12ba4fdb-873b-453b-8c08-f8992f3cacd1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3042894-df63-4d6b-8c59-cabc647bc2ed",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "WestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adbacf73-bb17-4f1b-ac9e-ee86874db623",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "WestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4640a658-79d4-4708-b3cf-892b64f44fbc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "NorthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3058fa93-488a-474c-adb5-76b14247eefa",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "NorthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28e9fa52-4613-40b4-b2ac-d186c055ea25",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "EastButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "abd47294-a740-48f8-9e52-eca708542f92",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "EastButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "997bae58-1387-4c1a-826a-9ed628b5d221",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "SouthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4900257d-82cd-4062-8246-8165b144e6e0",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "SouthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Keyboard And Mouse",
            "bindingGroup": "Keyboard And Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}